k8s/api-gateway/flagger/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: default
spec:
  parentRefs:
    - name: api-gateway
  rules: 
    - backendRefs:
      - kind: Service
        name: backend
        port: 8080
